# IPO_Calendar

./: .gitignore  Dockerfile  airflow_setup.sh  check.html  docker-compose.yml  draw.excalidraw  init.sql  pyproject.toml  readme.md  requirements.txt  test.ipynb  test_FH.py  unittests.yml  unknown_symbols.json
.github/workflows/: unittests.yml
app/: app.py  config.py  dag_ipo_data.py  db_create.py  db_helper.py  db_insert.py  db_model.py  db_setting.py  fetcher_data.py  fetcher_source.py  generator.py  generator_as_of_list.py  generator_calendar.py  generator_graph.py  main.py  requirements.txt
app/core/: get_analysis.py
app/dba/: db_helper.py  models.py
app/static/: script_add_events_calendar.js  scripts.js  scripts_asof.js  scripts_asof_old.js  scripts_asof_query.js  styles.css  styles_asof.css  styles_fonts.css
app/static/fonts/Gord-Quick-Font/: Befonts-License.txt  read-this-first-fdda-2.txt
app/templates/: asof_form.html  asof_form_popup.html  asof_progress.html  calendar.html  index.html  loggedin.html  login.html  register.html  stock_graph.html  tables.html
app/test_app/: __init__.py  test_app_main.py  test_dba_db_helper.py  test_dba_models.py  utils_db.py  utils_test_data.py
app/test_app/response/: expected_get_dataset_filter_route.html  index_route.html
app/utils/: asof_utils.py  debug_utils.py
dags/: config.py  dag_TEST.py  dag_analyse_historic_data.py  dag_history_stock_values.py  dag_ipo_data.py  dag_stock_symbols.py  db_helper.py  db_query_creator.py  dba_helper.py  get_db_data.py  get_sources.py  requirements.txt  sources.py  test_playground.py
dags/dba/: db_model.py
dags/test_dags/dags/: test_dag_ipo_data.py  unittest.cfg
dags/utils/: get_db_data.py  get_sources.py
dba/: create_db_query.py  crud.py  db_helper.py  models.py  models_app.py  models_dag.py  schemas_app.py
dba/test_dba/: __init__.py  test_dba_db_helper.py  test_dba_models.py  utils_db.py  utils_test_data.py
test_app/: __init__.py  test_dba_db_helper.py
test_app/response/: response_test_client.html
utils/: check.py  data_transformation.py  get_db_data.py  get_sources.py  schema.py
