[tool.poetry]
name = "IPO Calender tool"
version = "0.1.0"
description = "A sample project to analyze IPOs and the follow up data"
authors = ["Laura Gerlach <l.gerlach@icloud.com>"]

[tool.poetry.dependencies]
apache-airflow= ">=2.8.0,<3.0.0"
cachetools = "^5.3.1"
discord = "*"
fastapi = "*"
finnhub-python = "2.4.18"
jinja2 = "^3.1.2"
pandas = "*"
pillow = "^10.1.0"
plotly = "^5.18.0"
python = "<3.12,~=3.8"
python-dotenv = "^1.0.0"
psycopg2-binary = "2.9.9"
pydantic = "^2.4.2"
pytest= "7.4.4"
sqlalchemy = "<2.0"
uvicorn = "*"
pytest-flask = "^1.3.0"
httpx = "^0.26.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
bcrypt = "^4.1.2"
python-multipart = "^0.0.9"
asyncpg = "^0.29.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe]
envfile = ".env"